Fix: Improve dark mode text visibility

--- a/style.css
+++ b/style.css
@@ -295,6 +295,10 @@ button a {
 
 #hero h4 {
     padding-bottom: 15px;
+    color: #000000;
+}
+#hero h2{
+    color: rgb(0, 0, 0);
 }
 
 #hero h1 {
@@ -359,6 +363,9 @@ button a {
     border-radius: 4px;
     color: #088178;
     font-size: 16px;
+}
+[data-theme="dark"] #feature .fe-box h6 {
+    color: #ffffff;
 }
 
 #feature .fe-box:nth-child(1) h6 {
